syntax = "proto3";

import "google/protobuf/timestamp.proto";
import "google/protobuf/duration.proto";
import "google/api/annotations.proto";
import "protoc-gen-swagger/options/annotations.proto";

package exchanger;


service ExchangerService {
    rpc Healthz(HealthzRequest) returns (HealthzResponse) {}
}

enum ExchangeStatutes{
    UNKNOWN = 0;
    NEW = 1;
    WAITING_DEPOSIT = 2;
    INSUFFICIENT_DEPOSIT = 3;
    DEPOSIT_PAID = 4;
    CREATING_OUTGOING_TRANSFER = 5;
    OUTGOING_RUNNING = 6;
    CLOSED = 7;
    FAILED = 8;
}

enum ResponseStatus {
    NOT_SET = 0;
    SUCCESS = 1;
    ERROR = 2;
    INVALID_REQUEST = 3;
}

message ResponseHeader {
    ResponseStatus status = 1;
    string description = 2;
}

message HealthzRequest {};


message HealthzResponse {
    ResponseHeader header = 1;
}
